fix scrollbar
save toggles
fix message spacing
remove marquee

--- a/public/theme.css
+++ b/public/theme.css
@@ -504,12 +504,6 @@ a {
   animation-iteration-count: 20;
 }
 
-.marquee {
-  animation-name: marquee;
-  animation-duration: 10s;
-  animation-iteration-count: 6;
-}
-
 .italic {
     transform: skewX(-15deg);
 }
@@ -527,18 +521,6 @@ a {
 
 .nlink {
     text-decoration: none;
-}
-
-@keyframes marquee {
-  0% {
-    transform: translate(0%);
-  }
-  50% {
-    transform: translate(90vw);
-  }
-  100% {
-    transform: translate(0%);
-  }
 }
 
 @keyframes spin {
